# pybullet_test

./: README.md  convert_meshes.py  convert_stl_to_obj.py  docker-compose-moveit2.yml  drake_ik_solver.py  fix_urdf_paths.py  main.py  pybullet_arm_control.py  urdf_position_test.py
arm_ver6/test2_description/meshes/: robot_ver7_grap2_2_v1_1.stl  robot_ver7_grap2_2_v1__1__1.stl  robot_ver7_grap_2_v1_1.stl  robot_ver7_grap_2_v1__1__1.stl  robot_ver7_link_1_v1_1.stl  robot_ver7_link_2_v1_1.stl  robot_ver7_link_3_v1_1.stl  robot_ver7_link_4_v1_1.stl
excurate_arm/: target.urdf  target.urdf.backup  test_urdf.urdf
moveit_docker_activate/: moveit_activate.sh
moveit_docker_activate/install/: local_setup.sh  setup.sh
moveit_docker_activate/log/: latest_build
moveit_docker_activate/src/moveit2_robot_arm_control/: CMakeLists.txt
moveit_docker_activate/src/new_config/: CMakeLists.txt
moveit_docker_activate/src/new_config2/: .setup_assistant  CMakeLists.txt
moveit_docker_activate/src/new_config3/: .setup_assistant  CMakeLists.txt  package.xml
moveit_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moveit_ws/log/: latest_build
moveit_ws/src/hello_moveit/: package.xml
moveit_ws/src/moveit_robot_generate/: CMakeLists.txt
moveit_ws/src/moveit_robot_generate/config/: ros2_controllers.yaml
moveit_ws/src/moveit_robot_generate/launch/: ik_demo.launch.py  move_group.launch.py  static_virtual_joint_tfs.launch.py
moveit_ws/src/moveit_robot_generate/src/: ik_node.cpp
target_robot/: target.urdf
target_robot/meshes/: robot_ver7_grap1_2_v1_1.stl
(+197 files in other folders)
